fixed constellations typ

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div id = "hemisphereSeason"> north hemisphere/fall </div>
 				<div id = "temperature"> 62 F/ 32 C </div>
 				<br>
-				<a onclick = "constBut()" class = "btn btn-custom btn-lg" role = "button"> Constellations></a>
+				<a onclick = "constBut()" class = "btn btn-custom btn-lg" role = "button"> Constellations</a>
 			</div>
 		</div>
 		<div class ="col-xs-4">
